# breakout

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp  main.h
src/core/: Ball.cpp  Brick.cpp  BrickManager.cpp  GameManager.cpp  Paddle.cpp  Status.cpp
src/core/include/: Ball.h  Brick.h  BrickManager.h  GameManager.h  Paddle.h  Status.h
src/ui/: MainMenu.cpp  MainMenu.h
src/ui/include/: MainMenu.h
